--- a/Site.Master
+++ b/Site.Master
@@ -54,7 +54,7 @@
             </div>
         </header>
 
-        <div class="px-6">
+        <div class="px-6 max-w-7xl mx-auto">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
             <!--
