--- a/Content/tailwind.css
+++ b/Content/tailwind.css
@@ -623,6 +623,18 @@ video {
   position: relative;
 }
 
+.top-80 {
+  top: 20rem;
+}
+
+.-bottom-1\.5 {
+  bottom: -0.375rem;
+}
+
+.-bottom-1 {
+  bottom: -0.25rem;
+}
+
 .top-0 {
   top: 0px;
 }
@@ -649,50 +661,6 @@ video {
 
 .right-0 {
   right: 0px;
-}
-
-.bottom-1\.5 {
-  bottom: 0.375rem;
-}
-
-.bottom-1 {
-  bottom: 0.25rem;
-}
-
-.bottom-0\.5 {
-  bottom: 0.125rem;
-}
-
-.bottom-0 {
-  bottom: 0px;
-}
-
-.top-10 {
-  top: 2.5rem;
-}
-
-.bottom-2 {
-  bottom: 0.5rem;
-}
-
-.-bottom-1\.5 {
-  bottom: -0.375rem;
-}
-
-.-bottom-1 {
-  bottom: -0.25rem;
-}
-
-.top-40 {
-  top: 10rem;
-}
-
-.top-60 {
-  top: 15rem;
-}
-
-.top-80 {
-  top: 20rem;
 }
 
 .z-10 {
@@ -749,14 +717,6 @@ video {
   margin-left: 0.25rem;
 }
 
-.mt-40 {
-  margin-top: 10rem;
-}
-
-.mt-36 {
-  margin-top: 9rem;
-}
-
 .flex {
   display: flex;
 }
@@ -769,6 +729,10 @@ video {
   display: none;
 }
 
+.h-3\/6 {
+  height: 50%;
+}
+
 .h-full {
   height: 100%;
 }
@@ -777,36 +741,12 @@ video {
   height: 48px;
 }
 
-.h-4\/6 {
-  height: 66.666667%;
-}
-
-.h-5\/6 {
-  height: 83.333333%;
-}
-
-.h-1\/6 {
-  height: 16.666667%;
-}
-
-.h-2\/6 {
-  height: 33.333333%;
-}
-
-.h-3\/6 {
-  height: 50%;
-}
-
-.w-screen {
-  width: 100vw;
+.w-full {
+  width: 100%;
 }
 
 .w-\[300px\] {
   width: 300px;
-}
-
-.w-full {
-  width: 100%;
 }
 
 .w-\[48px\] {
@@ -894,13 +834,13 @@ video {
   background-color: rgba(226, 226, 226, var(--tw-bg-opacity));
 }
 
-.bg-gradient-to-t {
-  background-image: linear-gradient(to top, var(--tw-gradient-stops));
+.bg-accent {
+  --tw-bg-opacity: 1;
+  background-color: rgba(141, 83, 193, var(--tw-bg-opacity));
 }
 
-.from-red-500 {
-  --tw-gradient-from: #ef4444;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(239, 68, 68, 0));
+.bg-gradient-to-t {
+  background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
 
 .from-white {
@@ -1030,6 +970,11 @@ video {
   color: rgba(239, 239, 239, var(--tw-text-opacity));
 }
 
+.text-accent {
+  --tw-text-opacity: 1;
+  color: rgba(141, 83, 193, var(--tw-text-opacity));
+}
+
 .opacity-0 {
   opacity: 0;
 }
@@ -1096,6 +1041,11 @@ video {
 .hover\:bg-light-hover:hover {
   --tw-bg-opacity: 1;
   background-color: rgba(226, 226, 226, var(--tw-bg-opacity));
+}
+
+.hover\:bg-accent-hover:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(94, 55, 128, var(--tw-bg-opacity));
 }
 
 .hover\:underline:hover {
