--- a/Content/tailwind.css
+++ b/Content/tailwind.css
@@ -615,6 +615,10 @@ video {
   --tw-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
@@ -623,16 +627,11 @@ video {
   position: relative;
 }
 
-.top-80 {
-  top: 20rem;
-}
-
-.-bottom-1\.5 {
-  bottom: -0.375rem;
-}
-
-.-bottom-1 {
-  bottom: -0.25rem;
+.inset-0 {
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
 }
 
 .top-0 {
@@ -663,16 +662,36 @@ video {
   right: 0px;
 }
 
+.top-80 {
+  top: 20rem;
+}
+
+.-bottom-1\.5 {
+  bottom: -0.375rem;
+}
+
+.-bottom-1 {
+  bottom: -0.25rem;
+}
+
+.top-\[50\%\] {
+  top: 50%;
+}
+
+.left-\[50\%\] {
+  left: 50%;
+}
+
+.right-6 {
+  right: 1.5rem;
+}
+
+.top-6 {
+  top: 1.5rem;
+}
+
 .z-10 {
   z-index: 10;
-}
-
-.m-5 {
-  margin: 1.25rem;
-}
-
-.m-2 {
-  margin: 0.5rem;
 }
 
 .m-3 {
@@ -689,32 +708,9 @@ video {
   margin-right: 1rem;
 }
 
-.mt-20 {
-  margin-top: 5rem;
-}
-
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
-.mr-2 {
-  margin-right: 0.5rem;
-}
-
-.mr-8 {
-  margin-right: 2rem;
-}
-
-.mr-1 {
-  margin-right: 0.25rem;
-}
-
-.mr-4 {
-  margin-right: 1rem;
-}
-
-.mt-10 {
-  margin-top: 2.5rem;
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .mt-4 {
@@ -731,6 +727,42 @@ video {
 
 .ml-1 {
   margin-left: 0.25rem;
+}
+
+.mt-20 {
+  margin-top: 5rem;
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
+.mr-8 {
+  margin-right: 2rem;
+}
+
+.mr-1 {
+  margin-right: 0.25rem;
+}
+
+.mr-4 {
+  margin-right: 1rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.mr-2 {
+  margin-right: 0.5rem;
 }
 
 .block {
@@ -753,14 +785,6 @@ video {
   display: none;
 }
 
-.h-3\/6 {
-  height: 50%;
-}
-
-.h-24 {
-  height: 6rem;
-}
-
 .h-full {
   height: 100%;
 }
@@ -769,20 +793,40 @@ video {
   height: 48px;
 }
 
+.h-2 {
+  height: 0.5rem;
+}
+
+.h-4 {
+  height: 1rem;
+}
+
 .h-6 {
   height: 1.5rem;
 }
 
-.w-full {
-  width: 100%;
+.h-3\/6 {
+  height: 50%;
 }
 
-.w-24 {
-  width: 6rem;
+.h-24 {
+  height: 6rem;
+}
+
+.h-\[1px\] {
+  height: 1px;
+}
+
+.min-h-\[400px\] {
+  min-height: 400px;
 }
 
 .w-\[300px\] {
   width: 300px;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .w-\[48px\] {
@@ -793,8 +837,44 @@ video {
   width: 24px;
 }
 
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-4 {
+  width: 1rem;
+}
+
 .w-6 {
   width: 1.5rem;
+}
+
+.w-24 {
+  width: 6rem;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
+.w-28 {
+  width: 7rem;
+}
+
+.w-\[484px\] {
+  width: 484px;
+}
+
+.w-\[98\%\] {
+  width: 98%;
+}
+
+.w-\[95\%\] {
+  width: 95%;
+}
+
+.min-w-\[400px\] {
+  min-width: 400px;
 }
 
 .max-w-7xl {
@@ -805,9 +885,40 @@ video {
   flex: 1 1 auto;
 }
 
+.translate-x-\[-50\%\] {
+  --tw-translate-x: -50%;
+  transform: var(--tw-transform);
+}
+
+.translate-y-\[-50\%\] {
+  --tw-translate-y: -50%;
+  transform: var(--tw-transform);
+}
+
 .rotate-180 {
   --tw-rotate: 180deg;
   transform: var(--tw-transform);
+}
+
+.transform {
+  transform: var(--tw-transform);
+}
+
+@-webkit-keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.animate-spin {
+  -webkit-animation: spin 1s linear infinite;
+          animation: spin 1s linear infinite;
 }
 
 .grid-cols-1 {
@@ -842,31 +953,73 @@ video {
   gap: 1rem;
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
+.rounded-3xl {
+  border-radius: 1.5rem;
 }
 
 .rounded-full {
   border-radius: 9999px;
 }
 
-.rounded-3xl {
-  border-radius: 1.5rem;
+.rounded-xl {
+  border-radius: 0.75rem;
 }
 
-.bg-accent {
-  --tw-bg-opacity: 1;
-  background-color: rgba(141, 83, 193, var(--tw-bg-opacity));
+.rounded-2xl {
+  border-radius: 1rem;
 }
 
-.bg-light {
-  --tw-bg-opacity: 1;
-  background-color: rgba(239, 239, 239, var(--tw-bg-opacity));
+.border-2 {
+  border-width: 2px;
+}
+
+.border-b-\[1px\] {
+  border-bottom-width: 1px;
+}
+
+.border-red {
+  --tw-border-opacity: 1;
+  border-color: rgba(230, 0, 35, var(--tw-border-opacity));
+}
+
+.border-light-hover {
+  --tw-border-opacity: 1;
+  border-color: rgba(226, 226, 226, var(--tw-border-opacity));
+}
+
+.border-gray-500 {
+  --tw-border-opacity: 1;
+  border-color: rgba(107, 114, 128, var(--tw-border-opacity));
+}
+
+.border-gray-600 {
+  --tw-border-opacity: 1;
+  border-color: rgba(75, 85, 99, var(--tw-border-opacity));
+}
+
+.border-gray-800 {
+  --tw-border-opacity: 1;
+  border-color: rgba(31, 41, 55, var(--tw-border-opacity));
+}
+
+.border-gray-900 {
+  --tw-border-opacity: 1;
+  border-color: rgba(17, 24, 39, var(--tw-border-opacity));
+}
+
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgba(0, 0, 0, var(--tw-border-opacity));
 }
 
 .bg-red {
   --tw-bg-opacity: 1;
   background-color: rgba(230, 0, 35, var(--tw-bg-opacity));
+}
+
+.bg-light {
+  --tw-bg-opacity: 1;
+  background-color: rgba(239, 239, 239, var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -877,6 +1030,21 @@ video {
 .bg-light-hover {
   --tw-bg-opacity: 1;
   background-color: rgba(226, 226, 226, var(--tw-bg-opacity));
+}
+
+.bg-accent {
+  --tw-bg-opacity: 1;
+  background-color: rgba(141, 83, 193, var(--tw-bg-opacity));
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
+}
+
+.bg-gray-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(107, 114, 128, var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-t {
@@ -909,29 +1077,23 @@ video {
   padding: 0.75rem;
 }
 
+.p-8 {
+  padding: 2rem;
+}
+
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
 
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-}
-
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
 }
 
 .px-2 {
@@ -944,32 +1106,37 @@ video {
   padding-bottom: 2rem;
 }
 
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
+.px-16 {
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
+
 .text-center {
   text-align: center;
 }
 
 .font-garamond {
   font-family: EB Garamond;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
-}
-
-.text-8xl {
-  font-size: 6rem;
-  line-height: 1;
-}
-
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }
 
 .text-lg {
@@ -987,6 +1154,31 @@ video {
   line-height: 1.25rem;
 }
 
+.text-8xl {
+  font-size: 6rem;
+  line-height: 1;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -995,9 +1187,9 @@ video {
   font-weight: 600;
 }
 
-.text-accent {
+.text-light {
   --tw-text-opacity: 1;
-  color: rgba(141, 83, 193, var(--tw-text-opacity));
+  color: rgba(239, 239, 239, var(--tw-text-opacity));
 }
 
 .text-dark {
@@ -1005,9 +1197,19 @@ video {
   color: rgba(17, 17, 17, var(--tw-text-opacity));
 }
 
+.text-accent {
+  --tw-text-opacity: 1;
+  color: rgba(141, 83, 193, var(--tw-text-opacity));
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+
+.text-red {
+  --tw-text-opacity: 1;
+  color: rgba(230, 0, 35, var(--tw-text-opacity));
 }
 
 .text-gray-500 {
@@ -1015,17 +1217,36 @@ video {
   color: rgba(107, 114, 128, var(--tw-text-opacity));
 }
 
-.text-light {
+.text-gray-700 {
   --tw-text-opacity: 1;
-  color: rgba(239, 239, 239, var(--tw-text-opacity));
+  color: rgba(55, 65, 81, var(--tw-text-opacity));
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgba(0, 0, 0, var(--tw-text-opacity));
+}
+
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgba(75, 85, 99, var(--tw-text-opacity));
 }
 
 .opacity-0 {
   opacity: 0;
 }
 
+.opacity-50 {
+  opacity: 0.5;
+}
+
 .shadow-xl {
   --tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1078,9 +1299,9 @@ video {
   -webkit-line-clamp: 2;
 }
 
-.hover\:bg-accent-hover:hover {
+.hover\:bg-red-hover:hover {
   --tw-bg-opacity: 1;
-  background-color: rgba(94, 55, 128, var(--tw-bg-opacity));
+  background-color: rgba(173, 8, 27, var(--tw-bg-opacity));
 }
 
 .hover\:bg-light-hover:hover {
@@ -1088,18 +1309,42 @@ video {
   background-color: rgba(226, 226, 226, var(--tw-bg-opacity));
 }
 
-.hover\:bg-red-hover:hover {
+.hover\:bg-accent-hover:hover {
   --tw-bg-opacity: 1;
-  background-color: rgba(173, 8, 27, var(--tw-bg-opacity));
+  background-color: rgba(94, 55, 128, var(--tw-bg-opacity));
 }
 
 .hover\:underline:hover {
   text-decoration: underline;
 }
 
+.focus\:border-light-hover:focus {
+  --tw-border-opacity: 1;
+  border-color: rgba(226, 226, 226, var(--tw-border-opacity));
+}
+
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.focus\:ring:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-accent:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgba(141, 83, 193, var(--tw-ring-opacity));
+}
+
+.focus\:ring-opacity-25:focus {
+  --tw-ring-opacity: 0.25;
+}
+
+.focus\:ring-offset-1:focus {
+  --tw-ring-offset-width: 1px;
 }
 
 .group:hover .group-hover\:cursor-\[zoom-in\] {
@@ -1117,6 +1362,11 @@ video {
 }
 
 @media (min-width: 640px) {
+  .sm\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
   .sm\:mt-20 {
     margin-top: 5rem;
   }
@@ -1127,6 +1377,10 @@ video {
 
   .sm\:block {
     display: block;
+  }
+
+  .sm\:w-\[484px\] {
+    width: 484px;
   }
 
   .sm\:grid-cols-3 {
