--- a/Content/tailwind.css
+++ b/Content/tailwind.css
@@ -667,16 +667,16 @@ video {
   z-index: 10;
 }
 
-.m-5 {
-  margin: 1.25rem;
-}
-
-.m-2 {
-  margin: 0.5rem;
+.float-right {
+  float: right;
 }
 
 .m-3 {
   margin: 0.75rem;
+}
+
+.m-14 {
+  margin: 3.5rem;
 }
 
 .mx-auto {
@@ -715,6 +715,10 @@ video {
 
 .mt-10 {
   margin-top: 2.5rem;
+}
+
+.mr-0 {
+  margin-right: 0px;
 }
 
 .mt-4 {
@@ -757,8 +761,16 @@ video {
   height: 50%;
 }
 
-.h-24 {
-  height: 6rem;
+.h-\[130px\] {
+  height: 130px;
+}
+
+.h-\[161px\] {
+  height: 161px;
+}
+
+.h-\[5rem\] {
+  height: 5rem;
 }
 
 .h-full {
@@ -777,8 +789,16 @@ video {
   width: 100%;
 }
 
-.w-24 {
-  width: 6rem;
+.w-\[130px\] {
+  width: 130px;
+}
+
+.w-\[11rem\] {
+  width: 11rem;
+}
+
+.w-\[5rem\] {
+  width: 5rem;
 }
 
 .w-\[300px\] {
@@ -797,8 +817,56 @@ video {
   width: 1.5rem;
 }
 
+.w-\[\]\] {
+  width: ];
+}
+
+.w-\[161\]\] {
+  width: 161];
+}
+
+.w-\[161px\]\] {
+  width: 161px];
+}
+
+.w-\[1px\]\] {
+  width: 1px];
+}
+
+.w-\[165\.5\.5\]\] {
+  width: 165.5.5];
+}
+
+.w-\[165\.5\.5\] {
+  width: 165.5.5;
+}
+
+.w-\[165\.5\.5rem\] {
+  width: 165.5.5rem;
+}
+
+.w-\[15\.5\.5rem\] {
+  width: 15.5.5rem;
+}
+
+.w-\[15\.5rem\] {
+  width: 15.5rem;
+}
+
+.min-w-min {
+  min-width: -webkit-min-content;
+  min-width: -moz-min-content;
+  min-width: min-content;
+}
+
 .max-w-7xl {
   max-width: 80rem;
+}
+
+.max-w-max {
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
+  max-width: max-content;
 }
 
 .flex-auto {
@@ -812,6 +880,14 @@ video {
 
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-rows-2 {
+  grid-template-rows: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -842,6 +918,10 @@ video {
   gap: 1rem;
 }
 
+.gap-\[1px\] {
+  gap: 1px;
+}
+
 .rounded-xl {
   border-radius: 0.75rem;
 }
@@ -852,6 +932,19 @@ video {
 
 .rounded-3xl {
   border-radius: 1.5rem;
+}
+
+.rounded-l-2xl {
+  border-top-left-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+}
+
+.rounded-tr-2xl {
+  border-top-right-radius: 1rem;
+}
+
+.rounded-br-2xl {
+  border-bottom-right-radius: 1rem;
 }
 
 .bg-accent {
@@ -967,9 +1060,9 @@ video {
   line-height: 1.75rem;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-lg {
