--- a/Content/tailwind.css
+++ b/Content/tailwind.css
@@ -698,6 +698,10 @@ video {
   float: right;
 }
 
+.float-left {
+  float: left;
+}
+
 .m-3 {
   margin: 0.75rem;
 }
@@ -745,8 +749,8 @@ video {
   margin-right: 0px;
 }
 
-.mt-14 {
-  margin-top: 3.5rem;
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .mt-20 {
@@ -771,10 +775,6 @@ video {
 
 .mt-6 {
   margin-top: 1.5rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
 }
 
 .mr-2 {
@@ -823,6 +823,10 @@ video {
 
 .h-\[5rem\] {
   height: 5rem;
+}
+
+.h-\[79\.5px\] {
+  height: 79.5px;
 }
 
 .h-2 {
@@ -985,6 +989,10 @@ video {
   gap: 1rem;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .rounded-3xl {
   border-radius: 1.5rem;
 }
@@ -993,12 +1001,12 @@ video {
   border-radius: 9999px;
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
 .rounded-2xl {
   border-radius: 1rem;
+}
+
+.rounded-xl {
+  border-radius: 0.75rem;
 }
 
 .rounded-l-2xl {
@@ -1308,6 +1316,13 @@ video {
 
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.line-clamp-1 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
 }
 
 .line-clamp-2 {
