--- a/Site.Master
+++ b/Site.Master
@@ -39,11 +39,12 @@
                 <%--Site Scripts--%>
             </Scripts>
         </asp:ScriptManager>
-
+        <asp:button ID="btnUserPage" runat="server" CssClass="hidden" OnClick="btnUserPage_click" PostBackUrl="~/User.aspx" />
         <div id="master"></div>
 
         <div class="px-6">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
+            
             </asp:ContentPlaceHolder>
             <!--
             <footer>
