--- a/Content/Site.css
+++ b/Content/Site.css
@@ -42,3 +42,18 @@
   background: url("https://api.iconify.design/noto:pencil.svg") no-repeat center
     center / contain;
 }
+
+/* Targtes on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 14px;
+}
+
+*::-webkit-scrollbar-track {
+  background: white;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #606060;
+  border-radius: 20px;
+  border: 4px solid white;
+}
